# ai_kawpow_trainer

./: CMakeLists.txt  build.sh  build_and_run.sh  current_job.json
examples/proxy/: client.py  proxy_client.py  proxy_server.py
src/: gpu_model.cpp  gpu_model.cu  gpu_model.h  log.cpp  log.h  main.cpp  upload_weights.cpp  upload_weights.h
